--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -4,7 +4,7 @@ svg { display: block; overflow: hidden; }
 #map {
   position: relative;
   border: solid 4px #ccc;
-  background: #eee;
+  background: #001420;
   height: 512px;
 }
 
