--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,7 @@ input:invalid, textarea:invalid { border-radius: 1px;  -moz-box-shadow: 0px 0px 
 .no-boxshadow textarea:invalid { background-color: #f0dddd; }
 
 ::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
-::selection { background:#FF5E99; color:#fff; text-shadow: none; } 
+::selection { background:#EEE; text-shadow: none; } 
 a:link { -webkit-tap-highlight-color: #FF5E99; } 
 
 button {  width: auto; overflow: visible; }
@@ -87,18 +87,6 @@ button {  width: auto; overflow: visible; }
  */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 @media all and (orientation:portrait) { 
   
 }
@@ -108,8 +96,6 @@ button {  width: auto; overflow: visible; }
 }
 
 @media screen and (max-device-width: 480px) {
-  
-  
   /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
 }
 
